Fix styling issues on tablet

--- a/curling-main/sass/layout/_header.scss
+++ b/curling-main/sass/layout/_header.scss
@@ -227,6 +227,8 @@
   }
 
   .nav-menu-primary-wrapper {
+    margin-left: auto;
+    margin-right: auto;
     background-color: $white;
   }
 
